The remember me check box, the generation of the refreshToken and the it's integration with the API