@@ -3,6 +3,7 @@ package pi.pperformance.elite.UserController;
 import java.util.Collections;
 import java.util.Map;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -40,13 +41,54 @@ public class AuthController {
 
             // Load user details and generate JWT token
             final UserDetails userDetails = userDetailsService.loadUserByUsername(email);
-            final String jwt = jwtUtil.generateToken(userDetails.getUsername());
+            final String accessToken = jwtUtil.generateToken(userDetails.getUsername());
+            //generate the refreshtoken
+            final String refreshToken = jwtUtil.generateRefreshToken(userDetails.getUsername());
 
             // Return the generated JWT token in the response
-            return ResponseEntity.ok(Collections.singletonMap("token", jwt));
+            //return the refresh token as well
+            return ResponseEntity.ok(Map.of(
+            "accessToken", accessToken,
+            "refreshToken", refreshToken
+        ));
         } catch (AuthenticationException e) {
             // If authentication fails, return error response
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Invalid email or password!");
+            //maram: I changed the message so we can have more clarity about the error
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+                "message", "Invalid email or password!",
+                "errorCode", "AUTH001"
+            ));
         }
+    }
+
+    @PostMapping("/refresh")
+    public ResponseEntity<?> refreshAccessToken(@RequestBody Map<String, String> request){
+        //extracting the refresh token from the request
+        String refreshToken = request.get("refreshToken");
+        if (refreshToken ==null){
+            //checking if any problem happenned
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of( "message", "Refresh token is missing!",
+            "errorCode", "AUTH003"));
+        }
+
+        //extracting email from the request
+        String email;
+        try{
+            email = jwtUtil.extractEmail(refreshToken); // extract the email from the refresh token
+        }catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+                "message", "Invalid refresh token format!",
+                "errorCode", "AUTH004"
+            ));
+        }
+        // Validate the refresh token using both email and token
+    if (!jwtUtil.validateToken(refreshToken, email)) {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+            "message", "Invalid or expired refresh token!",
+            "errorCode", "AUTH005"
+        ));
+    }
+        String newAccessToken = jwtUtil.generateToken(email);
+        return ResponseEntity.ok(Map.of("accessToken", newAccessToken));
     }
 }
